--- a/menu.html
+++ b/menu.html
@@ -10,10 +10,12 @@
 <body>
     <div class="container">
         <h1>Yahtzee Simulator</h1>
-        <img src="img/Logo.png" alt="">
+        <img src="images/Logo.png" alt="">
         <div class="buttons-container">
-            <button class="btn-play">Jugar</button>
-            <button class="btn-simulate">Simular</button>
+            <button class="btn-play">
+                <a href="juego-desktop-1.html">Jugar</a>
+            </button>
+        <button class="btn-simulate">Simular</button>
         </div>
     </div>
 </body>
