--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,9 @@
             <button class="btn-play">
                 <a href="juego-desktop-1.html">Jugar</a>
             </button>
-        <button class="btn-simulate">Simular</button>
+        <button class="btn-simulate">
+            <a href="simulacion-desktop-1.html">Simular</a>
+        </button>
         </div>
     </div>
 </body>
