--- a/algoritmos-num-aleatorios.html
+++ b/algoritmos-num-aleatorios.html
@@ -38,10 +38,16 @@
         <div class="contents">
             <div id="content1" class="content content-active">
                 <h3>Option 1</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
-                </p>
+                <div class="inputs-container">
+                    <div class="form-group">
+                        <label class="form-label" for="first">Semilla</label>
+                        <input id="first" class="form-input" type="text" />
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="first">Total de Números a Generar</label>
+                        <input id="first" class="form-input" type="text" />
+                    </div>
+                </div>
             </div>
 
             <div id="content2" class="content">
