--- a/menu.html
+++ b/menu.html
@@ -15,9 +15,12 @@
             <button class="btn-play">
                 <a href="juego-desktop-1.html">Jugar</a>
             </button>
-        <button class="btn-simulate">
-            <a href="simulacion-desktop-1.html">Simular</a>
-        </button>
+            <button class="btn-simulate">
+                <a href="simulacion-desktop-1.html">Simular</a>
+            </button>
+            <button class="btn-numeros">
+                <a href="algoritmos-num-aleatorios.html">Números aleatorios</a>
+            </button>
         </div>
     </div>
 </body>
