--- a/juego-desktop-1.html
+++ b/juego-desktop-1.html
@@ -132,6 +132,6 @@
         </div>
     </div>
 
-    <script src="js/play.js"></script>
+    <script type="module" src="js/play.js"></script>
 </body>
 </html>
