--- a/algoritmos-num-aleatorios.html
+++ b/algoritmos-num-aleatorios.html
@@ -11,33 +11,33 @@
     <div class="tab-container">
         <ul class="options">
             <li id="option1" class="option option-active">
-                Option 1
+                Cuadrados Medios
             </li>
 
             <li id="option2" class="option">
-                Option 2
+                Productos Medios
             </li>
 
             <li id="option3" class="option">
-                Option 3
+                Multiplicador Constante
             </li>
 
             <li id="option4" class="option">
-                Option 4
+                Algoritmo Lineal
             </li>
 
             <li id="option5" class="option">
-                Option 5
+                Congruencial Multiplicativo
             </li>
 
             <li id="option6" class="option">
-                Option 6
+                Congruencial Aditivo
             </li>
         </ul>
 
         <div class="contents">
             <div id="content1" class="content content-active">
-                <h3>Option 1</h3>
+                <h3>Cuadrados Medios</h3>
                 <div class="inputs-container">
                     <div class="form-group">
                         <label class="form-label" for="first">Semilla</label>
@@ -48,46 +48,262 @@
                         <input id="first" class="form-input" type="text" />
                     </div>
                 </div>
+
+                <div class="limiter">
+                    <div class="container-table">
+                        <div class="wrap-table">
+                            <div class="table">
+                                <table>
+                                    <thead>
+                                        <tr class="table-head">
+                                            <th class="column1">Dato1</th>
+                                            <th class="column2">Dato2</th>
+                                            <th class="column3">Dato3</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="content2" class="content">
-                <h3>Option 2</h3>
+                <h3>Productos Medios</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
                 </p>
+
+                <div class="limiter">
+                    <div class="container-table">
+                        <div class="wrap-table">
+                            <div class="table">
+                                <table>
+                                    <thead>
+                                        <tr class="table-head">
+                                            <th class="column1">Dato1</th>
+                                            <th class="column2">Dato2</th>
+                                            <th class="column3">Dato3</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="content3" class="content">
-                <h3>Option 3</h3>
+                <h3>Multiplicador Constante</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
                 </p>
+
+                <div class="limiter">
+                    <div class="container-table">
+                        <div class="wrap-table">
+                            <div class="table">
+                                <table>
+                                    <thead>
+                                        <tr class="table-head">
+                                            <th class="column1">Dato1</th>
+                                            <th class="column2">Dato2</th>
+                                            <th class="column3">Dato3</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="content4" class="content">
-                <h3>Option 4</h3>
+                <h3>Algoritmo Linea</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
                 </p>
+
+                <div class="limiter">
+                    <div class="container-table">
+                        <div class="wrap-table">
+                            <div class="table">
+                                <table>
+                                    <thead>
+                                        <tr class="table-head">
+                                            <th class="column1">Dato1</th>
+                                            <th class="column2">Dato2</th>
+                                            <th class="column3">Dato3</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="content5" class="content">
-                <h3>Option 5</h3>
+                <h3>Congruencial Multiplicativo</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
                 </p>
+
+                <div class="limiter">
+                    <div class="container-table">
+                        <div class="wrap-table">
+                            <div class="table">
+                                <table>
+                                    <thead>
+                                        <tr class="table-head">
+                                            <th class="column1">Dato1</th>
+                                            <th class="column2">Dato2</th>
+                                            <th class="column3">Dato3</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id="content6" class="content">
-                <h3>Option 6</h3>
+                <h3>Congruencial Aditivo</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
                 </p>
+
+                <div class="limiter">
+                    <div class="container-table">
+                        <div class="wrap-table">
+                            <div class="table">
+                                <table>
+                                    <thead>
+                                        <tr class="table-head">
+                                            <th class="column1">Dato1</th>
+                                            <th class="column2">Dato2</th>
+                                            <th class="column3">Dato3</th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="column1">12345</td>
+                                            <td class="column2">12345</td>
+                                            <td class="column3">12345</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
