--- a/algoritmos-num-aleatorios.html
+++ b/algoritmos-num-aleatorios.html
@@ -130,43 +130,42 @@
             </div>
 
             <div id="content4" class="content">
-                <h3>Algoritmo Linea</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
-                </p>
+                <h3>Algoritmo Lineal</h3>
+                <form>
+                    <div class="inputs-container">
+                        <div class="form-group">
+                            <label class="form-label" for="first">Semilla</label>
+                            <input id="semilla-algoritmo-lineal" class="form-input"  type="text" />
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label" for="first">Constante Multiplicativo</label>
+                            <input id="constante-multiplicador" class="form-input"  type="text" />
+                        </div>
+                    </div>
+                    <div class="inputs-container">
+                        <div class="form-group">
+                            <label class="form-label" for="first">Constante Aditivo</label>
+                            <input id="constante-aditivo" class="form-input"  type="text" />
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label" for="first">Módulo</label>
+                            <input id="modulo" class="form-input"  type="text" />
+                        </div>
+                    </div>
+                    <div class="inputs-container">
+                        <div class="form-group">
+                            <label class="form-label" for="first">Total de Números a Generar</label>
+                            <input id="total-multiplicador" class="form-input"  type="text" />
+                        </div>
+                    </div>
+
+                    <input id="btn-multiplicador" type="submit" value="Generar Números" class="btn">
+                </form>
 
                 <div class="limiter">
                     <div class="container-table">
                         <div class="wrap-table">
-                            <div class="table">
-                                <table>
-                                    <thead>
-                                        <tr class="table-head">
-                                            <th class="column1">Dato1</th>
-                                            <th class="column2">Dato2</th>
-                                            <th class="column3">Dato3</th>
-                                        </tr>
-                                    </thead>
-
-                                    <tbody>
-                                        <tr>
-                                            <td class="column1">12345</td>
-                                            <td class="column2">12345</td>
-                                            <td class="column3">12345</td>
-                                        </tr>
-                                        <tr>
-                                            <td class="column1">12345</td>
-                                            <td class="column2">12345</td>
-                                            <td class="column3">12345</td>
-                                        </tr>
-                                        <tr>
-                                            <td class="column1">12345</td>
-                                            <td class="column2">12345</td>
-                                            <td class="column3">12345</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            <div class="table" id="tabla-algoritmo-lineal">
                             </div>
                         </div>
                     </div>
@@ -175,42 +174,48 @@
 
             <div id="content5" class="content">
                 <h3>Congruencial Multiplicativo</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Vel odit odio, natus quasi tenetur maiores? Reiciendis, tenetur dolorum amet unde aperiam fugit soluta ullam aspernatur.
-                </p>
+                <form>
+                    <div class="inputs-container">
+                        <div class="form-group">
+                            <label class="form-label" for="first">Semilla</label>
+                            <input id="semilla-algoritmo-lineal" class="form-input"  type="text" />
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label" for="first">Factor de multiplicación (k)</label>
+                            <input id="factor-de-multiplicacion" class="form-input"  type="text" />
+                        </div>
+                    </div>
+                    <div class="inputs-container">
+                        <div class="form-group">
+                            <label class="form-label" for="first">Numero entero (g)</label>
+                            <input id="num-entero" class="form-input"  type="text" />
+                        </div>
+                        <div class="form-group">
+                            <div class="form-group">
+                                <label class="form-label" for="first">Total de Números a Generar</label>
+                                <input id="total-multiplicador" class="form-input"  type="text" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="inputs-container">
+                        <select name="" id="" class="combobox">
+                            <option value="op1">
+                                a = 3 + 8k
+                            </option>
+                            <option value="op2">
+                                a = 5 + 8k
+                            </option>
+                        </select>
+                    </div>
+
+                    <input id="btn-multiplicador" type="submit" value="Generar Números" class="btn">
+                </form>
 
                 <div class="limiter">
                     <div class="container-table">
                         <div class="wrap-table">
-                            <div class="table">
-                                <table>
-                                    <thead>
-                                        <tr class="table-head">
-                                            <th class="column1">Dato1</th>
-                                            <th class="column2">Dato2</th>
-                                            <th class="column3">Dato3</th>
-                                        </tr>
-                                    </thead>
-
-                                    <tbody>
-                                        <tr>
-                                            <td class="column1">12345</td>
-                                            <td class="column2">12345</td>
-                                            <td class="column3">12345</td>
-                                        </tr>
-                                        <tr>
-                                            <td class="column1">12345</td>
-                                            <td class="column2">12345</td>
-                                            <td class="column3">12345</td>
-                                        </tr>
-                                        <tr>
-                                            <td class="column1">12345</td>
-                                            <td class="column2">12345</td>
-                                            <td class="column3">12345</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            <div class="table" id="tabla-algoritmo-lineal">
                             </div>
                         </div>
                     </div>
