--- a/algoritmos-num-aleatorios.html
+++ b/algoritmos-num-aleatorios.html
@@ -42,11 +42,11 @@
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Semilla</label>
-                            <input id="semilla-cuadrados" class="form-input"  type="text" />
+                            <input id="semilla-cuadrados" class="form-input" type="number">
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="first">Total de Números a Generar</label>
-                            <input id="total-cuadrados" class="form-input"  type="text" />
+                            <input id="total-cuadrados" class="form-input" type="number">
                         </div>
                     </div>
 
@@ -69,17 +69,17 @@
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Semilla 0</label>
-                            <input id="semilla1-productos" class="form-input"  type="text" />
+                            <input id="semilla1-productos" class="form-input"  type="number" />
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="first">Semilla 1</label>
-                            <input id="semilla2-productos" class="form-input"  type="text" />
+                            <input id="semilla2-productos" class="form-input"  type="number" />
                         </div>
                     </div>
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Total de Números a Generar</label>
-                            <input id="total-productos" class="form-input"  type="text" />
+                            <input id="total-productos" class="form-input"  type="number" />
                         </div>
                     </div>
 
@@ -102,17 +102,17 @@
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Semilla</label>
-                            <input id="semilla-multiplicador" class="form-input"  type="text" />
+                            <input id="semilla-multiplicador" class="form-input"  type="number" />
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="first">Constante</label>
-                            <input id="constante-multiplicador" class="form-input"  type="text" />
+                            <input id="constante-multiplicador" class="form-input"  type="number" />
                         </div>
                     </div>
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Total de Números a Generar</label>
-                            <input id="total-multiplicador" class="form-input"  type="text" />
+                            <input id="total-multiplicador" class="form-input"  type="number" />
                         </div>
                     </div>
 
@@ -135,31 +135,31 @@
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Semilla</label>
-                            <input id="semilla-algoritmo-lineal" class="form-input"  type="text" />
+                            <input id="semilla-algoritmo-lineal" class="form-input"  type="number" />
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="first">Constante Multiplicativo</label>
-                            <input id="constante-multiplicador" class="form-input"  type="text" />
+                            <input id="constante-multiplicador-algoritmo-lineal" class="form-input"  type="number" />
                         </div>
                     </div>
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Constante Aditivo</label>
-                            <input id="constante-aditivo" class="form-input"  type="text" />
+                            <input id="constante-aditivo" class="form-input"  type="number" />
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="first">Módulo</label>
-                            <input id="modulo" class="form-input"  type="text" />
+                            <input id="modulo-algoritmo-lineal" class="form-input"  type="number" />
                         </div>
                     </div>
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Total de Números a Generar</label>
-                            <input id="total-multiplicador" class="form-input"  type="text" />
+                            <input id="total-algoritmo-lineal" class="form-input"  type="number" />
                         </div>
                     </div>
 
-                    <input id="btn-multiplicador" type="submit" value="Generar Números" class="btn">
+                    <input id="btn-algoritmo-lineal" type="submit" value="Generar Números" class="btn">
                 </form>
 
                 <div class="limiter">
@@ -178,44 +178,37 @@
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Semilla</label>
-                            <input id="semilla-algoritmo-lineal" class="form-input"  type="text" />
+                            <input id="semilla-congruencial-multiplicativo" class="form-input"  type="number" />
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="first">Factor de multiplicación (k)</label>
-                            <input id="factor-de-multiplicacion" class="form-input"  type="text" />
-                        </div>
+                            <input id="factor-de-multiplicacion" class="form-input"  type="number" />
+                        </div>                        
                     </div>
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Numero entero (g)</label>
-                            <input id="num-entero" class="form-input"  type="text" />
+                            <input id="num-entero" class="form-input"  type="number" />
                         </div>
                         <div class="form-group">
-                            <div class="form-group">
-                                <label class="form-label" for="first">Total de Números a Generar</label>
-                                <input id="total-multiplicador" class="form-input"  type="text" />
-                            </div>
+                            <select name="" id="combobox" class="combobox form-input">
+                                <option value="opc1">
+                                    a = 3 + 8k
+                                </option>
+                                <option value="opc2">
+                                    a = 5 + 8k
+                                </option>
+                            </select>
                         </div>
                     </div>
 
-                    <div class="inputs-container">
-                        <select name="" id="" class="combobox">
-                            <option value="op1">
-                                a = 3 + 8k
-                            </option>
-                            <option value="op2">
-                                a = 5 + 8k
-                            </option>
-                        </select>
-                    </div>
-
-                    <input id="btn-multiplicador" type="submit" value="Generar Números" class="btn">
+                    <input id="btn-congruencial-multiplicativo" type="submit" value="Generar Números" class="btn">
                 </form>
 
                 <div class="limiter">
                     <div class="container-table">
                         <div class="wrap-table">
-                            <div class="table" id="tabla-algoritmo-lineal">
+                            <div class="table" id="tabla-congruencial-multiplicativo">
                             </div>
                         </div>
                     </div>
