--- a/algoritmos-num-aleatorios.html
+++ b/algoritmos-num-aleatorios.html
@@ -221,7 +221,7 @@
                     <div class="inputs-container">
                         <div class="form-group">
                             <label class="form-label" for="first">Secuencia de números separados por un espacio y una coma</label>
-                            <input id="secuencia-numeros" class="form-input"  type="number" />
+                            <input id="secuencia-numeros" class="form-input"  type="text" />
                         </div>                      
                     </div>
                     <div class="inputs-container">
@@ -237,6 +237,15 @@
 
                     <input id="btn-congruencial-aditivo" type="submit" value="Generar Números" class="btn">
                 </form>
+
+                <div class="limiter">
+                    <div class="container-table">
+                        <div class="wrap-table">
+                            <div class="table" id="tabla-congruencial-aditivo">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
