--- a/juego-desktop-1.html
+++ b/juego-desktop-1.html
@@ -106,7 +106,7 @@
             <Button class="btn">
                 <div class="text-btn">
                     <img src="./Images/home.png" class="img-btn"> 
-                    <a href="menu.html">Menú</a>
+                    <a href="index.html">Menú</a>
                 </div>
             </Button>
         </div>
