Validacion de campos

--- a/algoritmos-num-aleatorios.html
+++ b/algoritmos-num-aleatorios.html
@@ -147,27 +147,27 @@
                         <div class="inputs-container">
                             <div class="form-group">
                                 <label class="form-label" for="first">Semilla</label>
-                                <input id="semilla-algoritmo-lineal" class="form-input"  type="number" />
+                                <input id="semilla-algoritmo-lineal" class="form-input"  type="number"  min="0"/>
                             </div>
                             <div class="form-group">
                                 <label class="form-label" for="first">Constante Multiplicativo</label>
-                                <input id="constante-multiplicador-algoritmo-lineal" class="form-input"  type="number" />
+                                <input id="constante-multiplicador-algoritmo-lineal" class="form-input"  type="number"  min="0"/>
                             </div>
                         </div>
                         <div class="inputs-container">
                             <div class="form-group">
                                 <label class="form-label" for="first">Constante Aditivo</label>
-                                <input id="constante-aditivo" class="form-input"  type="number" />
+                                <input id="constante-aditivo" class="form-input"  type="number"  min="0"/>
                             </div>
                             <div class="form-group">
                                 <label class="form-label" for="first">Módulo</label>
-                                <input id="modulo-algoritmo-lineal" class="form-input"  type="number" />
+                                <input id="modulo-algoritmo-lineal" class="form-input"  type="number"  min="0"/>
                             </div>
                         </div>
                         <div class="inputs-container">
                             <div class="form-group">
                                 <label class="form-label" for="first">Total de Números a Generar</label>
-                                <input id="total-algoritmo-lineal" class="form-input"  type="number" />
+                                <input id="total-algoritmo-lineal" class="form-input"  type="number"  min="0"/>
                             </div>
                         </div>
 
